--- a/myApp/templates/myApp/index.html
+++ b/myApp/templates/myApp/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Victor James | Portfolio</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="{% static 'myApp/styles.css' %}" />
 </head>
 <body>
 
@@ -33,7 +33,7 @@
     </div>
 
     <div class="hero-image">
-      <img src="images/victor.jpg" alt="Victor James">
+      <img src="{%static 'myApp/images/victor2.jpg' %}" alt="Victor James">
     </div>
   </section>
 </main>
