--- a/myApp/templates/myApp/projects.html
+++ b/myApp/templates/myApp/projects.html
@@ -29,7 +29,7 @@
   <div class="grid">
 
     <div class="card purple">
-      <h3>Optima</h3>
+      <h3>OPTIMA</h3>
       <p>
         A focused productivity and notes application designed to
         reduce friction and improve clarity.
